@@ -44,6 +44,7 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
   - viewer - didn't decrypt pcap for large packets correctly (issue #1756)
   - viewer - support wiseURL for wise.js viewer plugin (issue #1758)
   - viewer - display "0" values
+  - multies - support elasticsearchApiKey
   - wise - handle empty config file on startup
   - wise - support ./ with value-actions
   - wise - support usersElasticsearchAPIKey
